[package]
name = "native-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
solana-program = "=1.18.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.4", features = [
  "no-entrypoint",
] }
thiserror = "1.0.0"
solana-security-txt = "1.1.1"
